# kinect-bridge2_catkin-indigo

./: README.md
src/kinect_bridge2/: CMakeLists.txt  package.xml
src/kinect_bridge2/exe/: CMakeLists.txt
src/kinect_bridge2/include/kinect_common/: kinect_device.h
src/kinect_bridge2/include/messages/: kinect_messages.h
src/kinect_bridge2/src/: CMakeLists.txt
src/kinect_bridge2/src/atomics/: CMakeLists.txt
src/kinect_bridge2/src/messages/: CMakeLists.txt
